# ray_tracer

./: .gitignore  2  CMakeLists.txt  \  calculateColor.cpp  calculateColor.h  calculateLighting.cpp  calculateLighting.h  caluculate_neares_hit.cpp  camera.h  createRay.cpp  functions.cu  hittable.cpp  hittable.h  hittableList.h  intersect.cpp  intersect.h  kernel.cpp  kernel.h  light.h  loadData.cpp  loadData.h  main.cpp  main.cu  plane.cpp  plane.h  rayTracer.h  rays.h  scene.h  sphere.cpp  sphere.h  structs.h  timing.h  triangle.cpp  triangle.h
.cache/clangd/index/: intersect.h.B3F4CBAEFADDB997.idx  main.cpp.D12C35905A6FE3A8.idx  rays.h.402F1473FC9D1BC8.idx  scene.h.A3935253F66FD863.idx  scene.h.A3935253F66FD863.sync-conflict-20240926-134605-VK2OIX6.idx  test.cpp.12814E55A5627F56.idx
scenes/: basic.scene  mesh.scene  test.scene  trianble.scene
